--- a/gruppo.htm
+++ b/gruppo.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="it">
     <head>
         <meta charset="UTF-8">
@@ -45,16 +45,13 @@
                 Semplicemente per mettersi alla prova!
                 Tra le alternative proproste, questa ci
                 sembrava la più formativa e, infatti, non
-                ci vergogamo nel dire che abbiamo imparato
-                tantissime cose nel mondo dell'ipertesto e
+                ci vergognamo nel dire che abbiamo imparato
+                tantissimi fondamenti nel mondo dell'ipertesto e
                 nei fogli di stile.
-                Siamo consapevoli che il sito abbia dei bug
-                e che non sia a livello di altri nostri 
-                compagni, ma siamo molto fieri del risultato, 
-                perchè ci siamo impegnati come non mai 
-                per avere il risultato migliore possibile.
-                Sperando in un giudizio positivo, auguro a 
-                tutti i docenti e lettori, una buona eseprienza
+                Per la presenza di eventuali bug, scrivere direttamente
+                a Lombardi Mattia, in modo tale da rendere il sito
+                più funzionale possibile.
+                Auguro a tutti i docenti e lettori, una buona eseprienza
                 nel nostro sito: <mark>Educazione Civica.</mark>
             </p>
         </div>
